[package]
name = "dashboard-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client for aggregating data from other services
reqwest = { workspace = true }

# Configuration
config = "0.13"

# Metrics
prometheus = "0.13"

# Cache
moka = { version = "0.12", features = ["future"] }

[lints]
workspace = true

[lib]
name = "dashboard_service"
path = "src/lib.rs"

[[bin]]
name = "dashboard-service"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
rstest = { workspace = true }
mockall = "0.11"
wiremock = "0.5"
