[package]
name = "mcp-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2" 