[package]
name = "qaqc_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate", "bigdecimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# BigDecimal for numeric precision
bigdecimal = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Statistics and analytics
linfa = "0.7"
linfa-linear = "0.7"
ndarray = "0.15"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Security
bcrypt = "0.15"
jsonwebtoken = "9.2" 