[package]
name = "reports_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "reports_service"
path = "src/lib.rs"

[[bin]]
name = "reports_service"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.6", features = ["headers", "macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# HTTP client for fetching data from other services
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.13"

# PDF generation
printpdf = "0.6"

# Excel generation
rust_xlsxwriter = "0.60"

# CSV handling
csv = "1.3"

# Templating for reports
tera = "1.19"

# Async stream processing
futures = "0.3"
tokio-stream = "0.1"

# Report scheduling
tokio-cron-scheduler = { version = "0.9", features = ["signal"] }

# Report generation dependencies
wkhtmltopdf = "0.4"
calamine = "0.22"
polars = { version = "0.35", features = ["lazy", "csv", "json", "parquet"] }

# Analytics dependencies
ndarray = "0.15"
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.18"
mockall = "0.11"
wiremock = "0.5"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
once_cell = "1.19"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["server", "tcp"] }

[lints]
workspace = true
