[package]
name = "cognitive_assistant_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Ollama
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment and configuration
dotenvy = "0.15"
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# JWT and authentication
jsonwebtoken = "9.0"

# Laboratory domain models
time = "0.3"

[lib]
name = "cognitive_assistant_service"
path = "src/lib.rs"

[[bin]]
name = "cognitive_assistant_service"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
rstest = { workspace = true }
wiremock = "0.5"
mockall = "0.11"
fake = { version = "2.9", features = ["derive"] }
once_cell = "1.19"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
